--- a/assets/index.css
+++ b/assets/index.css
@@ -798,8 +798,7 @@ flex-direction: column;
   .home-section {
     margin-top: 70px;
   }
-  .home-title { font-size: 2.8rem;
-  height: 40%; }
+  .home-title { font-size: 2.8rem; }
   .btn-link { font-size: 1.8rem; }
   .left-contact {
     display: none;
@@ -812,7 +811,7 @@ flex-direction: column;
   height: 100%;
   margin-top: 150px;
   width: 330px;
-  height: 1200px;
+  height: 1000%;
 }
 .footer {
 flex-direction: column;
